Refactor: code cleanup and minor fixes
General cleanup and minor refactors across the project: mark many fields as final, remove unused fields/methods, localize variables, and simplify loops. MusicSystem changes: manage Synthesizer locally, initialize channels/instruments, and tidy timer/rng usage. Use PConstants.CENTER for imageMode in rendering classes. Physics/boid adjustments: simplify Move/Body, finalize Eye/Boid fields, and streamline behaviour handling. CellularAutomata fields (radiusNeigh, colors) made final. Update IntelliJ .idea workspace and VCS mappings.